feat(doc): #3402 added exploit files
- To vulnserver articles
- Pending create download links
- Disable similarities check on pylint


Former-commit-id: cd3b0cfad8524a3d6616ebbca9ea5fef34f3ad59

--- a/content/blog/vulnserver-trun/index.adoc
+++ b/content/blog/vulnserver-trun/index.adoc
@@ -359,6 +359,8 @@ image::success.gif[Our reverse shell]
 
 Great! We got our shell!
 
+You can download the final exploit link:exploit.py[here]
+
 == Conclusion
 
 This was one of the most straightforward exploits for Vulnserver.
