feat(doc): #3402 added download link
- For getting the exploit on Vulnserver
articles


Former-commit-id: dffa36050e51e9f7cf22c525056e4ff06c1aecfd

--- a/content/blog/vulnserver-gmon/index.adoc
+++ b/content/blog/vulnserver-gmon/index.adoc
@@ -572,6 +572,8 @@ image::shell1.gif[Success]
 
 Our shell! We are getting good at it, aren't we?
 
+You can download the final exploit link:exploit.py[here]
+
 == Conclusion
 
 Exploiting applications using `SEH` overwriting is just a little different
