--- a/content/blog/vulnserver-gter/index.adoc
+++ b/content/blog/vulnserver-gter/index.adoc
@@ -530,6 +530,8 @@ image::shell1.gif[Success]
 
 Awesome! We got our shell again!
 
+You can download the final exploit link:exploit.py[here]
+
 == Conclusion
 
 The egghunter technique is very useful when dealing with
