--- a/content/blog/vulnserver-kstet/index.adoc
+++ b/content/blog/vulnserver-kstet/index.adoc
@@ -630,6 +630,8 @@ image::success.gif[Success]
 
 Woohooo! We got our shell! And in a lot more fun way than with egghunters, huh?
 
+You can download the final exploit link:exploit.py[here]
+
 == Conclusion
 
 Multistage exploitation is a very cool method to use the available bytes to
