--- a/content/blog/vulnserver-gter-no-egghunter/index.adoc
+++ b/content/blog/vulnserver-gter-no-egghunter/index.adoc
@@ -671,6 +671,8 @@ image::success.gif[Shell]
 
 Whooo! We got our shell again!
 
+You can download the final exploit link:exploit.py[here]
+
 == Conclusion
 
 This time I wanted to show that there are always ways to overcome
